[tool.poetry]
name = "my-sample-project"
version = "0.1.0"
description = ""
authors = ["bharath <bhrth.dsra1@gmail.com>"]
readme = "README.md"
packages = [{include = "my_sample_project"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
